--- a/index.html
+++ b/index.html
@@ -4,44 +4,72 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <title>O projektu</title>
   </head>
   <body>
-    <nav>
-      <a href="index.html">O projektu</a>
-      <a href="andy.html">O Andy</a>
-      <a href="mili.html">O Mili</a>
-    </nav>
-    <h1>Zachraň se</h1>
+    <div class="wrapper">
+      <div class="container">
+        <div class="navigation">
+          <nav>
+            <a href="index.html">O projektu</a>
+            <a href="andy.html">O Andy</a>
+            <a href="mili.html">O Mili</a>
+          </nav>
+        </div>
+        <div class="content">
+          <div  class="content__heading">
+          <h1>Zachraň se</h1>
+</div>
+<div class="content__about" id="about">
+          <p>
+            Vytvoříme vědomostně-vzdělávací hru <i>Zachraň se</i> pro děti
+            školního věku, která bude mít za cíl je naučit jak se správně
+            zachovat v různých krizových situacích (např. na jakou nouzovou
+            linku zavolat v případě potřeby, jak řešit požár, jak se zachovat
+            při povodních, ale např. i běžné životní situace jako kde si můžeme
+            rozdělat ohniště v přírodě).
+<br />&nbsp;<br/>
+            Hra bude interaktivní hrací pole s různými situacemi, kterými bude
+            hráč procházet a řešit s nimi spojené úkoly. Při nesprávné odpovědi
+            mu bude zobrazeno ideální řešení dané situace. V průběhu hry hráč
+            získá body a v závěru bude vyhodnoceno, zda by v krizových situacích
+            uspěl, a znovu si bude moct zopakovat, v čem má mezery.
+          </p>
+          </div>
+          <div class="content__image">
+            <img src="img/Homepage.gif" alt="Homepage">
+          </div>
+<div class="content__idea">
+  <div class="content__idea__card1">
+          <h2>Jak jsme se daly dohromady? 👭</h2><br/>&nbsp;<br />
+          <p>
+            Ani jedna jsme zkraje neměly silnou preferenci, na jakém projektu
+            bychom chtěly pracovat, a tak jsme se rozhodly, že na to přijdeme
+            společně.)) Obě jsme hodně přátelské a máme rády společnost, žijeme
+            v Praze a máme psa maltézáčka. Mili je o něco aktivnější, skoro
+            každý den běhá, Andy zase raději hraje hry na PS, obě ale milujeme
+            dobré jídlo a objevujeme nové restaurace.
+          </p>
+          <a href="andy.html">O Andy</a>
+          <a href="mili.html">O Mily</a>
+          </div>
+          <div class="content__idea__card2">
 
-    <h2>O projektu</h2>
-    <p>
-      Vytvoříme vědomostně-vzdělávací hru <i>Zachraň se</i> pro děti školního
-      věku, která bude mít za cíl je naučit jak se správně zachovat v různých
-      krizových situacích (např. na jakou nouzovou linku zavolat v případě
-      potřeby, jak řešit požár, jak se zachovat při povodních, ale např. i běžné
-      životní situace jako kde si můžeme rozdělat ohniště v přírodě).
-    </p>
-    <p>
-      Hra bude interaktivní hrací pole s různými situacemi, kterými bude hráč
-      procházet a řešit s nimi spojené úkoly. Při nesprávné odpovědi mu bude
-      zobrazeno ideální řešení dané situace. V průběhu hry hráč získá body a v
-      závěru bude vyhodnoceno, zda by v krizových situacích uspěl, a znovu si
-      bude moct zopakovat, v čem má mezery.
-    </p>
-
-    <h2>Jak jsme se daly dohromady</h2>
-    <p>
-      Ani jedna jsme zkraje neměly silnou preferenci, na jakém projektu bychom
-      chtěly pracovat, a tak jsme se rozhodly, že na to přijdeme společně.)) Obě
-      jsme hodně přátelské a máme rády společnost, žijeme v Praze a máme psa
-      maltézáčka. Mili je o něco aktivnější, skoro každý den běhá, Andy zase
-      raději hraje hry na PS, obě ale milujeme dobré jídlo a objevujeme nové
-      restaurace.
-    </p>
-
-    <h2>Jak vznikl náš nápad</h2>
-    <p></p>
+          <h2>Jak vznikl náš nápad? 💡</h2><br />&nbsp;<br />
+          <p>            Ani jedna jsme zkraje neměly silnou preferenci, na jakém projektu
+            bychom chtěly pracovat, a tak jsme se rozhodly, že na to přijdeme
+            společně.)) Obě jsme hodně přátelské a máme rády společnost, žijeme
+            v Praze a máme psa maltézáčka. Mili je o něco aktivnější, skoro
+            každý den běhá, Andy zase raději hraje hry na PS, obě ale milujeme
+            dobré jídlo a objevujeme nové restaurace.</p>
+            <a href="#about">O projektu</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
