--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             dobré jídlo a objevujeme nové restaurace.
           </p>
           <a href="andy.html">O Andy</a>
-          <a href="mili.html">O Mily</a>
+          <a href="mili.html">O Mili</a>
           </div>
           <div class="content__idea__card2">
 
