--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -14,7 +15,8 @@
     <div class="wrapper">
       <div class="container">
         <div class="navigation">
-          <nav>
+          <button id="nav-btn" class="nav-btn"></button>
+          <nav class="nav-closed">
             <a href="index.html">O projektu</a>
             <a href="andy.html">O Andy</a>
             <a href="mili.html">O Mili</a>
@@ -60,12 +62,9 @@
           <div class="content__idea__card2">
 
           <h2>Jak vznikl náš nápad? 💡</h2><br />&nbsp;<br />
-          <p>            Ani jedna jsme zkraje neměly silnou preferenci, na jakém projektu
-            bychom chtěly pracovat, a tak jsme se rozhodly, že na to přijdeme
-            společně.)) Obě jsme hodně přátelské a máme rády společnost, žijeme
-            v Praze a máme psa maltézáčka. Mili je o něco aktivnější, skoro
-            každý den běhá, Andy zase raději hraje hry na PS, obě ale milujeme
-            dobré jídlo a objevujeme nové restaurace.</p>
+          <p>            
+            Od začátku jsme věděly, že bychom rády pracovaly na hře, protože nám přišlo, že si v ní nejlépe procvičíme vše, co jsme se naučily. Taky jsme chtěly něco nového, v čem si budemem moct vytvořit vlastní pravidla. A Andy napadlo, že má spoustu materiálů k řešení krizových situací, protože celá její rodina pracuje u hasičů. Tak jsme se rozhodly, že vytvoříme něco, co by mohlo být užitečné, protože se pomocí hry děti hravou formou naučí, jak v krizové situaci reagovat správně, a třeba se díky ní i opravdu zachrání, kdyby došlo na nejhorší. Navíc je takových situací opravdu mnoho, takže se nám líbilo, že můžeme v případě potřeby a chuti hru dále rozšiřovat a vylepšovat. 
+            </p>
             <a href="#about">O projektu</a>
           </div>
         </div>
