--- a/andy.html
+++ b/andy.html
@@ -4,39 +4,60 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="index.js" type="module"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Roboto+Mono:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>O Andy</title>
   </head>
   <body>
-    <nav>
-      <a href="index.html">O projektu</a>
-      <a href="andy.html">O Andy</a>
-      <a href="mili.html">O Mili</a>
-    </nav>
-    <h1>O Andy</h1>
-
-    <img class="profile--pic" src="img/andy.jpg" alt="fotka-andy" />
-    <p>
-      <b> Něco o mě:</b> Studovala jsem andragogiku a personální řízení na UJAK
-      a FF UK.
-    </p>
-    <p>
-      <b> Pracuju/pracovala jsem: </b>Pracovala jsem jako HR Executive v pražské
-      pobočce mezinárodní advokátní kanceláře Clifford Chance. Rozhodla jsem se
-      zde po čtyřech letech skončit a změnit obor.
-    </p>
-    <p>
-      <b> Ráda: </b>Volný čas trávím ráda s přáteli a psy venku na procházce či
-      lehce sportovně, jindy se věnuji digitální malbě, četbě nebo se (stále
-      neúspěšně) učím hrát na piano.
-    </p>
-    <p>
-      <b> Jsem: </b> přátelská, otevřená, zkraje trochu introvertní a potřebuji
-      čas se rozkoukat.
-    </p>
-    <p>
-      <b> Zajímavost o mě:</b> Zrovna jsem si pořídila štěně a už mám doma psa a
-      králíka.
-    </p>
+    <div class="wrapper">
+      <div class="container">
+        <div class="navigation">
+          <button id="nav-btn" class="nav-btn"></button>
+          <nav class="nav-closed">
+            <a href="index.html">O projektu</a>
+            <a href="andy.html">O Andy</a>
+            <a href="mili.html">O Mili</a>
+          </nav>
+        </div>
+        <div class="content">
+          <div class="content__heading">
+            <h1>O Andy</h1>
+          </div>
+          <div class="content__image">
+            <img class="profile--pic" src="img/andy.jpg" alt="fotka-andy" />
+          </div>
+          <div class="content__about">
+            <p>
+              <b> Něco o mě:</b> Studovala jsem andragogiku a personální řízení
+              na UJAK a FF UK.
+            </p>
+            <p>
+              <b> Pracuju/pracovala jsem: </b>Pracovala jsem jako HR Executive v
+              pražské pobočce mezinárodní advokátní kanceláře Clifford Chance.
+              Rozhodla jsem se zde po čtyřech letech skončit a změnit obor.
+            </p>
+            <p>
+              <b> Ráda: </b>Volný čas trávím ráda s přáteli a psy venku na
+              procházce či lehce sportovně, jindy se věnuji digitální malbě,
+              četbě nebo se (stále neúspěšně) učím hrát na piano.
+            </p>
+            <p>
+              <b> Jsem: </b> přátelská, otevřená, zkraje trochu introvertní a
+              potřebuji čas se rozkoukat.
+            </p>
+            <p>
+              <b> Zajímavost o mě:</b> Zrovna jsem si pořídila štěně a už mám
+              doma psa a králíka.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
