--- a/mili.html
+++ b/mili.html
@@ -4,38 +4,63 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="index.js" type="module"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Roboto+Mono:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>O Mili</title>
+    <title>O Andy</title>
   </head>
   <body>
-    <nav>
-      <a href="index.html">O projektu</a>
-      <a href="andy.html">O Andy</a>
-      <a href="mili.html">O Mili</a>
-    </nav>
-    <h1>O Mili</h1>
-
-    <img src="" alt="" />
-    <p>
-      <b> Něco o mě:</b> Pochádzam zo Slovenska, študovala som na VŠE v Prahe
-      odbor Management, pôvodne som si však vybrala úplne iný odbor -
-      architektúru. Počas štúdia som strávila 2 semestre v zahraničí - v
-      Lisabone v Portugalsku a v Atlante v USA.
-    </p>
-    <p>
-      <b> Pracuju/pracovala jsem:</b> Pracujem v digitálnej agentúre Kindred,
-      ktorá je súčasťou skupiny Publicis Groupe. Momentálne na pozícii email
-      marketing specialist a pracujem hlavne v Salesforce Marketing Cloud.
-    </p>
-    <p>
-      <b> Ráda:</b> Najväčším hobby je cestovanie a nikdy nemám problém zbaliť
-      sa a druhý deň niekam odletieť. Okrem toho rada varím, objavujem nové
-      reštaurácie a skoro každý deň behám.
-    </p>
-    <p>
-      <b> Jsem:</b> Som priateľská, otvorená a milujem spoločnosť. Som
-      perfekcionistka, čo mi často komplikuje život.
-    </p>
-    <p><b> Zajímavost o mě:</b> som diabetička a som závislá na zmrzline :)</p>
+    <div class="wrapper">
+      <div class="container">
+        <div class="navigation">
+          <button id="nav-btn" class="nav-btn"></button>
+          <nav class="nav-closed">
+            <a href="index.html">O projektu</a>
+            <a href="andy.html">O Andy</a>
+            <a href="mili.html">O Mili</a>
+          </nav>
+        </div>
+        <div class="content">
+          <div class="content__heading">
+            <h1>O Mili</h1>
+          </div>
+          <div class="content__image">
+            <img class="profile--pic" src="img/mili.jpg" alt="fotka-mili" />
+          </div>
+          <div class="content__about">
+            <p>
+              <b> Něco o mě:</b> Pochádzam zo Slovenska, študovala som na VŠE v
+              Prahe odbor Management, pôvodne som si však vybrala úplne iný
+              odbor - architektúru. Počas štúdia som strávila 2 semestre v
+              zahraničí - v Lisabone v Portugalsku a v Atlante v USA.
+            </p>
+            <p>
+              <b> Pracuju/pracovala jsem:</b> Pracujem v digitálnej agentúre
+              Kindred, ktorá je súčasťou skupiny Publicis Groupe. Momentálne na
+              pozícii email marketing specialist a pracujem hlavne v Salesforce
+              Marketing Cloud.
+            </p>
+            <p>
+              <b> Ráda:</b> Najväčším hobby je cestovanie a nikdy nemám problém
+              zbaliť sa a druhý deň niekam odletieť. Okrem toho rada varím,
+              objavujem nové reštaurácie a skoro každý deň behám.
+            </p>
+            <p>
+              <b> Jsem:</b> Som priateľská, otvorená a milujem spoločnosť. Som
+              perfekcionistka, čo mi často komplikuje život.
+            </p>
+            <p>
+              <b> Zajímavost o mě:</b> som diabetička a som závislá na zmrzline
+              :)
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
