--- a/andy.html
+++ b/andy.html
@@ -30,7 +30,12 @@
             <h1>O Andy</h1>
           </div>
           <div class="content__image">
-            <img class="profile--pic" src="img/andy.jpg" alt="fotka-andy" />
+            <img
+              class="profile--pic"
+              id="andy"
+              src="img/andy.jpg"
+              alt="fotka-andy"
+            />
           </div>
           <div class="content__about">
             <p>
