--- a/mili.html
+++ b/mili.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>O Andy</title>
+    <title>O Mili</title>
   </head>
   <body>
     <div class="wrapper">
